--- a/src/work/gentle/scss/index.scss
+++ b/src/work/gentle/scss/index.scss
@@ -1,4 +1,4 @@
-@import url(/reset.css);
+@import url(/src/css/base/reset.css);
 
 @font-face {
     font-family: GentleMonsterSerif-Regular;
@@ -8,7 +8,7 @@
 @font-face {
     font-family: myFirstFont-gBd;
     src: url(./font/SDGothicNeoaTTF-gBd.woff2);
-}
+} 
 
 @font-face {
     font-family: myFirstFont-fSm;
