--- a/src/css/pages/work.css
+++ b/src/css/pages/work.css
@@ -9,6 +9,7 @@
 #work .work_left .title {
   position: relative;
   width: 85%;
+  z-index: 10;
 }
 #work .work_left .title span {
   margin-bottom: 50px;
@@ -92,24 +93,18 @@
 }
 #work .work_list {
   opacity: 0;
-  width: 100%;
   height: 100%;
   position: absolute;
   right: 0;
   transform: translateX(100%);
   top: 0;
   background-color: #0B0C1F;
-  z-index: 99;
   align-items: center;
   justify-content: space-between;
   transition: 0.5s;
-}
-#work .work_list ul {
-  width: 45%;
-  margin-left: 80px;
+  z-index: 5;
 }
 #work .work_list ul li {
-  width: 80%;
   position: relative;
   padding: 20px;
 }
@@ -135,12 +130,10 @@
   gap: 5px;
 }
 #work .work_list ul li a .num {
-  font-size: 1.3rem;
   font-family: var(--mainNum-font);
   letter-spacing: 2px;
 }
 #work .work_list ul li a .name {
-  font-size: 1.5rem;
   font-family: var(--mainEng-font);
   text-transform: capitalize;
   font-weight: 500;
@@ -213,6 +206,29 @@
     font-size: 0.9rem;
     white-space: nowrap;
   }
+  #work .work_list {
+    width: 100%;
+  }
+  #work .work_list ul {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+  }
+  #work .work_list ul:nth-child(1) {
+    top: 20px;
+    left: 15px;
+  }
+  #work .work_list ul:nth-child(2) {
+    bottom: 20px;
+    left: 15px;
+  }
+  #work .work_list ul li .num {
+    font-size: 1rem;
+  }
+  #work .work_list ul li .name {
+    font-size: 1rem;
+  }
   #work .container {
     width: 100%;
     height: 100vh;
@@ -243,6 +259,30 @@
     text-align: center;
     padding-bottom: 80px;
   }
+  #work .work_list {
+    width: 100%;
+  }
+  #work .work_list ul {
+    width: 90%;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    position: absolute;
+  }
+  #work .work_list ul:nth-child(1) {
+    top: 20px;
+    left: 40px;
+  }
+  #work .work_list ul:nth-child(2) {
+    bottom: 20px;
+    left: 40px;
+  }
+  #work .work_list ul li .num {
+    font-size: 1rem;
+  }
+  #work .work_list ul li .name {
+    font-size: 1.2rem;
+  }
   #work .container {
     width: 100%;
     height: 100vh;
@@ -267,6 +307,32 @@
   }
   #work .work_left .work_title .details {
     height: 100px;
+  }
+  #work .work_list {
+    width: 50%;
+  }
+  #work .work_list ul {
+    width: 45%;
+    margin-left: 80px;
+    padding: 20px 0;
+    position: relative;
+  }
+  #work .work_list ul:nth-child(1) {
+    top: 0px;
+    left: 0px;
+  }
+  #work .work_list ul:nth-child(2) {
+    bottom: 0px;
+    left: 0px;
+  }
+  #work .work_list ul li {
+    width: 80%;
+  }
+  #work .work_list ul li .num {
+    font-size: 1.3rem;
+  }
+  #work .work_list ul li .name {
+    font-size: 1.5rem;
   }
   #work .container {
     right: 3%;
